// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dehydrate > circular array > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "3",
        "4",
        "1",
        "2",
      ],
      [
        0,
        3,
        -3,
        -4,
        2,
      ],
      [
        0,
        -1,
        -2,
        2,
        3,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 3,
      3 => 2,
      -1 => 1,
      -2 => 1,
      -3 => 1,
      -4 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > circular object > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "data",
        "head",
        "name",
        "tail",
        "hello",
        "b",
        "c",
        "a",
      ],
      [
        1,
        3,
        4,
      ],
      [
        0,
        -1,
        -2,
        -3,
        -4,
      ],
      [
        0,
        5,
        6,
        -8,
        8,
      ],
      [
        0,
        -1,
        5,
        -5,
        5,
      ],
      [
        1,
        3,
        7,
      ],
      [
        0,
        3,
        8,
        -7,
        2,
      ],
      [
        1,
        3,
        9,
      ],
      [
        0,
        -1,
        2,
        -6,
        0,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 3,
      3 => 4,
      -1 => 3,
      -2 => 1,
      -3 => 1,
      -4 => 1,
      4 => 1,
      5 => 3,
      -5 => 1,
      6 => 1,
      7 => 1,
      8 => 2,
      9 => 1,
      -6 => 1,
      -7 => 1,
      -8 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate 'string' undefined 1`] = `
[
  "Flatpack JSON v1",
  "string",
]
`;

exports[`dehydrate > dehydrate /[\\p{L}\\p{M}]+/gu undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    6,
    2,
    3,
  ],
  "[\\p{L}\\p{M}]+",
  "gu",
]
`;

exports[`dehydrate > dehydrate [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    3,
    2,
    3,
    2,
    4,
  ],
  "apple",
  "banana",
  "pineapple",
]
`;

exports[`dehydrate > dehydrate [ /[\\p{L}\\p{M}]+/gu, /[\\p{L}\\p{M}]+/gu, /[\\p{Lu}\\p{M}]+/gu ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    2,
    5,
  ],
  [
    6,
    3,
    4,
  ],
  "[\\p{L}\\p{M}]+",
  "gu",
  [
    6,
    6,
    4,
  ],
  "[\\p{Lu}\\p{M}]+",
]
`;

exports[`dehydrate > dehydrate [ { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, …(1) ] { dedupe: false } 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    7,
    10,
    13,
  ],
  [
    1,
    3,
    6,
  ],
  [
    0,
    4,
    5,
  ],
  "a",
  "b",
  [
    0,
    4,
    5,
  ],
  [
    1,
    8,
    9,
  ],
  [
    0,
    4,
    5,
  ],
  [
    0,
    4,
    5,
  ],
  [
    1,
    11,
    12,
  ],
  [
    0,
    4,
    5,
  ],
  [
    0,
    4,
    5,
  ],
  [
    1,
    14,
    15,
  ],
  [
    0,
    4,
    5,
  ],
  [
    0,
    4,
    5,
  ],
]
`;

exports[`dehydrate > dehydrate [ { a: 'a', b: 'b' }, { a: 'c', b: 'd' }, { b: 'b', a: 'a' }, …(2) ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    6,
    2,
    3,
    7,
  ],
  [
    1,
    3,
    3,
  ],
  [
    0,
    4,
    5,
  ],
  "a",
  "b",
  [
    1,
    3,
    7,
  ],
  [
    0,
    8,
    9,
  ],
  "c",
  "d",
]
`;

exports[`dehydrate > dehydrate [ {}, {}, {} ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    2,
    2,
  ],
  {},
]
`;

exports[`dehydrate > dehydrate [ 1, 2 ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    3,
  ],
  1,
  2,
]
`;

exports[`dehydrate > dehydrate [ 1n, 'hello', /\\w+/g, {}, [], 'hello' ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    5,
    7,
    10,
    11,
    5,
  ],
  [
    1,
    0,
    3,
  ],
  [
    8,
    4,
  ],
  1,
  [
    1,
    0,
    6,
  ],
  "hello",
  [
    6,
    8,
    9,
  ],
  "\\w+",
  "g",
  {},
  [
    0,
  ],
]
`;

exports[`dehydrate > dehydrate [ 1n, 2n, 1n, 2n, 9007199254740991n, -9007199254740991n, …(2) ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    4,
    2,
    4,
    6,
    8,
    10,
    12,
  ],
  [
    8,
    3,
  ],
  1,
  [
    8,
    5,
  ],
  2,
  [
    8,
    7,
  ],
  9007199254740991,
  [
    8,
    9,
  ],
  -9007199254740991,
  [
    8,
    11,
  ],
  "9007199254740992",
  [
    8,
    14,
  ],
  "-",
  [
    2,
    13,
    11,
  ],
]
`;

exports[`dehydrate > dehydrate [ Array(3) ] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
    2,
    2,
    3,
  ],
  [
    7,
    1704067200000,
  ],
  [
    7,
    1704153600000,
  ],
]
`;

exports[`dehydrate > dehydrate [] undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    0,
  ],
]
`;

exports[`dehydrate > dehydrate { a: [ 1 ] } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    4,
  ],
  [
    0,
    3,
  ],
  "a",
  [
    0,
    5,
  ],
  [
    0,
    6,
  ],
  1,
]
`;

exports[`dehydrate > dehydrate { a: { a: 'a', b: 'b' }, b: { a: 'c', b: 'd' }, …(6) } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    11,
  ],
  [
    0,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
  ],
  "a",
  "b",
  "m",
  "n",
  "nn",
  "nnn",
  "r",
  "s",
  [
    0,
    12,
    14,
    18,
    19,
    19,
    19,
    20,
    27,
  ],
  [
    1,
    13,
    13,
  ],
  [
    0,
    3,
    4,
  ],
  [
    1,
    13,
    15,
  ],
  [
    0,
    16,
    17,
  ],
  "c",
  "d",
  [
    5,
    13,
    13,
  ],
  [
    0,
    12,
    14,
    12,
    13,
    15,
    20,
    23,
  ],
  [
    6,
    21,
    22,
  ],
  "[\\p{L}\\p{M}]+",
  "gu",
  [
    1,
    24,
    26,
  ],
  [
    0,
    9,
    25,
  ],
  "rr",
  [
    0,
    20,
    20,
  ],
  [
    4,
    29,
  ],
  [
    1,
    13,
    13,
  ],
  [
    0,
    12,
    14,
    28,
    13,
    15,
    20,
    23,
  ],
]
`;

exports[`dehydrate > dehydrate { a: { a: 'a', b: 42 } } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    4,
  ],
  [
    0,
    3,
  ],
  "a",
  [
    0,
    5,
  ],
  [
    1,
    6,
    8,
  ],
  [
    0,
    3,
    7,
  ],
  "b",
  [
    0,
    3,
    9,
  ],
  42,
]
`;

exports[`dehydrate > dehydrate { a: { b: 1 } } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    4,
  ],
  [
    0,
    3,
  ],
  "a",
  [
    0,
    5,
  ],
  [
    1,
    6,
    8,
  ],
  [
    0,
    7,
  ],
  "b",
  [
    0,
    9,
  ],
  1,
]
`;

exports[`dehydrate > dehydrate { a: 1 } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    4,
  ],
  [
    0,
    3,
  ],
  "a",
  [
    0,
    5,
  ],
  1,
]
`;

exports[`dehydrate > dehydrate { fruit: [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ], …(2) } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    6,
  ],
  [
    0,
    3,
    4,
    5,
  ],
  "fruit",
  "joinFruit",
  "sentence",
  [
    0,
    7,
    13,
    14,
  ],
  [
    0,
    8,
    9,
    8,
    9,
    8,
    10,
  ],
  "apple",
  "banana",
  "pineapple",
  "-banana-apple-banana-apple-",
  [
    2,
    11,
    10,
  ],
  [
    2,
    8,
    12,
  ],
  "There is a bit of fruit on the table. Some banana, apple, and pineapple.",
]
`;

exports[`dehydrate > dehydrate { values: [ 'apple', 'banana', 'pineapple' ], …(1) } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    1,
    2,
    5,
  ],
  [
    0,
    3,
    4,
  ],
  "set",
  "values",
  [
    0,
    6,
    7,
  ],
  [
    4,
    7,
  ],
  [
    0,
    8,
    9,
    10,
  ],
  "apple",
  "banana",
  "pineapple",
]
`;

exports[`dehydrate > dehydrate {} undefined 1`] = `
[
  "Flatpack JSON v1",
  {},
]
`;

exports[`dehydrate > dehydrate 1 undefined 1`] = `
[
  "Flatpack JSON v1",
  1,
]
`;

exports[`dehydrate > dehydrate 1.1 undefined 1`] = `
[
  "Flatpack JSON v1",
  1.1,
]
`;

exports[`dehydrate > dehydrate Map{ 'apple' => 1, 'banana' => 2, 'pineapple' => 3 } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    5,
    2,
    6,
  ],
  [
    0,
    3,
    4,
    5,
  ],
  "apple",
  "banana",
  "pineapple",
  [
    0,
    7,
    8,
    9,
  ],
  1,
  2,
  3,
]
`;

exports[`dehydrate > dehydrate Set{ 'apple', 'banana', 'pineapple' } undefined 1`] = `
[
  "Flatpack JSON v1",
  [
    4,
    2,
  ],
  [
    0,
    3,
    4,
    5,
  ],
  "apple",
  "banana",
  "pineapple",
]
`;

exports[`dehydrate > dehydrate V2 'string' undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "string",
  ],
  [
    2,
    -1,
  ],
]
`;

exports[`dehydrate > dehydrate V2 'string' undefined > meta 1`] = `undefined`;

exports[`dehydrate > dehydrate V2 /[\\p{L}\\p{M}]+/gu undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "[\\p{L}\\p{M}]+",
    "gu",
  ],
  [
    6,
    -1,
    -2,
  ],
]
`;

exports[`dehydrate > dehydrate V2 /[\\p{L}\\p{M}]+/gu undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "[\\p{L}\\p{M}]+",
        "gu",
      ],
      [
        6,
        -1,
        -2,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      -1 => 1,
      -2 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ] undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "apple",
    "banana",
    "pineapple",
  ],
  [
    0,
    -1,
    -2,
    -1,
    -2,
    -1,
    -3,
  ],
]
`;

exports[`dehydrate > dehydrate V2 [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ] undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "apple",
        "banana",
        "pineapple",
      ],
      [
        0,
        -1,
        -2,
        -1,
        -2,
        -1,
        -3,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      -1 => 3,
      -2 => 2,
      -3 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 [ /[\\p{L}\\p{M}]+/gu, /[\\p{L}\\p{M}]+/gu, /[\\p{Lu}\\p{M}]+/gu ] undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "[\\p{L}\\p{M}]+",
    "gu",
    "[\\p{Lu}\\p{M}]+",
  ],
  [
    0,
    3,
    3,
    4,
  ],
  [
    6,
    -1,
    -2,
  ],
  [
    6,
    -3,
    -2,
  ],
]
`;

exports[`dehydrate > dehydrate V2 [ /[\\p{L}\\p{M}]+/gu, /[\\p{L}\\p{M}]+/gu, /[\\p{Lu}\\p{M}]+/gu ] undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "[\\p{L}\\p{M}]+",
        "gu",
        "[\\p{Lu}\\p{M}]+",
      ],
      [
        0,
        3,
        3,
        4,
      ],
      [
        6,
        -1,
        -2,
      ],
      [
        6,
        -3,
        -2,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 2,
      -1 => 1,
      -2 => 2,
      4 => 1,
      -3 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 [ { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, …(1) ] { dedupe: false } > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "a",
    "b",
  ],
  [
    0,
    3,
    6,
    9,
    12,
  ],
  [
    1,
    4,
    5,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    1,
    7,
    8,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    1,
    10,
    11,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    1,
    13,
    14,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    0,
    -1,
    -2,
  ],
]
`;

exports[`dehydrate > dehydrate V2 [ { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, { a: 'a', b: 'b' }, …(1) ] { dedupe: false } > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "a",
        "b",
      ],
      [
        0,
        3,
        6,
        9,
        12,
      ],
      [
        1,
        4,
        5,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        1,
        7,
        8,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        1,
        10,
        11,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        1,
        13,
        14,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        0,
        -1,
        -2,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      4 => 1,
      -1 => 8,
      -2 => 8,
      5 => 1,
      6 => 1,
      7 => 1,
      8 => 1,
      9 => 1,
      10 => 1,
      11 => 1,
      12 => 1,
      13 => 1,
      14 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 [ { a: 'a', b: 'b' }, { a: 'c', b: 'd' }, { b: 'b', a: 'a' }, …(2) ] undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "a",
    "b",
    "c",
    "d",
  ],
  [
    0,
    3,
    5,
    3,
    4,
    6,
  ],
  [
    1,
    4,
    4,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    1,
    4,
    6,
  ],
  [
    0,
    -3,
    -4,
  ],
]
`;

exports[`dehydrate > dehydrate V2 [ { a: 'a', b: 'b' }, { a: 'c', b: 'd' }, { b: 'b', a: 'a' }, …(2) ] undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "a",
        "b",
        "c",
        "d",
      ],
      [
        0,
        3,
        5,
        3,
        4,
        6,
      ],
      [
        1,
        4,
        4,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        1,
        4,
        6,
      ],
      [
        0,
        -3,
        -4,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 2,
      4 => 4,
      -1 => 1,
      -2 => 1,
      5 => 1,
      6 => 2,
      -3 => 1,
      -4 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 [ { a: undefined, b: undefined }, { a: undefined, b: undefined } ] undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "a",
    "b",
  ],
  [
    0,
    3,
    3,
  ],
  [
    1,
    4,
    5,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    0,
    0,
    0,
  ],
]
`;

exports[`dehydrate > dehydrate V2 [ { a: undefined, b: undefined }, { a: undefined, b: undefined } ] undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "a",
        "b",
      ],
      [
        0,
        3,
        3,
      ],
      [
        1,
        4,
        5,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        0,
        0,
        0,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 2,
      4 => 1,
      -1 => 1,
      -2 => 1,
      5 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 [ {}, {}, {} ] undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
  ],
  [
    0,
    3,
    3,
    3,
  ],
  {},
]
`;

exports[`dehydrate > dehydrate V2 [ {}, {}, {} ] undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
      ],
      [
        0,
        3,
        3,
        3,
      ],
      {},
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 3,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 [ 1, 2 ] undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
  ],
  [
    0,
    3,
    4,
  ],
  1,
  2,
]
`;

exports[`dehydrate > dehydrate V2 [ 1, 2 ] undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
      ],
      [
        0,
        3,
        4,
      ],
      1,
      2,
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      4 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 [ 1n, 'hello', /\\w+/g, {}, [], 'hello' ] undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "hello",
    "\\w+",
    "g",
  ],
  [
    0,
    3,
    6,
    7,
    8,
    9,
    6,
  ],
  [
    1,
    0,
    4,
  ],
  [
    8,
    5,
  ],
  1,
  [
    1,
    0,
    -1,
  ],
  [
    6,
    -2,
    -3,
  ],
  {},
  [
    0,
  ],
]
`;

exports[`dehydrate > dehydrate V2 [ 1n, 'hello', /\\w+/g, {}, [], 'hello' ] undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "hello",
        "\\w+",
        "g",
      ],
      [
        0,
        3,
        6,
        7,
        8,
        9,
        6,
      ],
      [
        1,
        0,
        4,
      ],
      [
        8,
        5,
      ],
      1,
      [
        1,
        0,
        -1,
      ],
      [
        6,
        -2,
        -3,
      ],
      {},
      [
        0,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      4 => 1,
      5 => 1,
      6 => 2,
      -1 => 1,
      7 => 1,
      -2 => 1,
      -3 => 1,
      8 => 1,
      9 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 [ 1n, 2n, 1n, 2n, 9007199254740991n, -9007199254740991n, …(2) ] undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "9007199254740992",
    "-9007199254740992",
  ],
  [
    0,
    3,
    5,
    3,
    5,
    7,
    9,
    11,
    12,
  ],
  [
    8,
    4,
  ],
  1,
  [
    8,
    6,
  ],
  2,
  [
    8,
    8,
  ],
  9007199254740991,
  [
    8,
    10,
  ],
  -9007199254740991,
  [
    8,
    -1,
  ],
  [
    8,
    -2,
  ],
]
`;

exports[`dehydrate > dehydrate V2 [ 1n, 2n, 1n, 2n, 9007199254740991n, -9007199254740991n, …(2) ] undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "9007199254740992",
        "-9007199254740992",
      ],
      [
        0,
        3,
        5,
        3,
        5,
        7,
        9,
        11,
        12,
      ],
      [
        8,
        4,
      ],
      1,
      [
        8,
        6,
      ],
      2,
      [
        8,
        8,
      ],
      9007199254740991,
      [
        8,
        10,
      ],
      -9007199254740991,
      [
        8,
        -1,
      ],
      [
        8,
        -2,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 2,
      4 => 1,
      5 => 2,
      6 => 1,
      7 => 1,
      8 => 1,
      9 => 1,
      10 => 1,
      11 => 1,
      -1 => 1,
      12 => 1,
      -2 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 [ Array(3) ] undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
  ],
  [
    0,
    3,
    3,
    4,
  ],
  [
    7,
    1704067200000,
  ],
  [
    7,
    1704153600000,
  ],
]
`;

exports[`dehydrate > dehydrate V2 [ Array(3) ] undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
      ],
      [
        0,
        3,
        3,
        4,
      ],
      [
        7,
        1704067200000,
      ],
      [
        7,
        1704153600000,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 2,
      4 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 [] undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
  ],
  [
    0,
  ],
]
`;

exports[`dehydrate > dehydrate V2 [] undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
      ],
      [
        0,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 { a: [ 1 ] } undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "a",
  ],
  [
    1,
    3,
    4,
  ],
  [
    0,
    -1,
  ],
  [
    0,
    5,
  ],
  [
    0,
    6,
  ],
  1,
]
`;

exports[`dehydrate > dehydrate V2 { a: [ 1 ] } undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "a",
      ],
      [
        1,
        3,
        4,
      ],
      [
        0,
        -1,
      ],
      [
        0,
        5,
      ],
      [
        0,
        6,
      ],
      1,
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      -1 => 1,
      4 => 1,
      5 => 1,
      6 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 { a: { a: 'a', b: 'b' }, b: { a: 'c', b: 'd' }, …(6) } undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "a",
    "b",
    "m",
    "n",
    "nn",
    "nnn",
    "r",
    "s",
    "c",
    "d",
    "[\\p{L}\\p{M}]+",
    "gu",
    "rr",
  ],
  [
    1,
    3,
    4,
  ],
  [
    0,
    -1,
    -2,
    -3,
    -4,
    -5,
    -6,
    -7,
    -8,
  ],
  [
    0,
    5,
    7,
    9,
    10,
    10,
    10,
    11,
    15,
  ],
  [
    1,
    6,
    6,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    1,
    6,
    8,
  ],
  [
    0,
    -9,
    -10,
  ],
  [
    5,
    6,
    6,
  ],
  [
    0,
    5,
    7,
    5,
    6,
    8,
    11,
    12,
  ],
  [
    6,
    -11,
    -12,
  ],
  [
    1,
    13,
    14,
  ],
  [
    0,
    -7,
    -13,
  ],
  [
    0,
    11,
    11,
  ],
  [
    4,
    17,
  ],
  [
    1,
    6,
    6,
  ],
  [
    0,
    5,
    7,
    16,
    6,
    8,
    11,
    12,
  ],
]
`;

exports[`dehydrate > dehydrate V2 { a: { a: 'a', b: 'b' }, b: { a: 'c', b: 'd' }, …(6) } undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "a",
        "b",
        "m",
        "n",
        "nn",
        "nnn",
        "r",
        "s",
        "c",
        "d",
        "[\\p{L}\\p{M}]+",
        "gu",
        "rr",
      ],
      [
        1,
        3,
        4,
      ],
      [
        0,
        -1,
        -2,
        -3,
        -4,
        -5,
        -6,
        -7,
        -8,
      ],
      [
        0,
        5,
        7,
        9,
        10,
        10,
        10,
        11,
        15,
      ],
      [
        1,
        6,
        6,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        1,
        6,
        8,
      ],
      [
        0,
        -9,
        -10,
      ],
      [
        5,
        6,
        6,
      ],
      [
        0,
        5,
        7,
        5,
        6,
        8,
        11,
        12,
      ],
      [
        6,
        -11,
        -12,
      ],
      [
        1,
        13,
        14,
      ],
      [
        0,
        -7,
        -13,
      ],
      [
        0,
        11,
        11,
      ],
      [
        4,
        17,
      ],
      [
        1,
        6,
        6,
      ],
      [
        0,
        5,
        7,
        16,
        6,
        8,
        11,
        12,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      -1 => 2,
      -2 => 2,
      -3 => 1,
      -4 => 1,
      -5 => 1,
      -6 => 1,
      -7 => 2,
      -8 => 1,
      4 => 1,
      5 => 4,
      6 => 9,
      7 => 3,
      8 => 3,
      -9 => 1,
      -10 => 1,
      9 => 1,
      10 => 3,
      11 => 5,
      -11 => 1,
      -12 => 1,
      12 => 2,
      13 => 1,
      -13 => 1,
      14 => 1,
      15 => 1,
      17 => 1,
      16 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 { a: { a: 'a', b: 42 } } undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "a",
    "b",
  ],
  [
    1,
    3,
    4,
  ],
  [
    0,
    -1,
  ],
  [
    0,
    5,
  ],
  [
    1,
    6,
    7,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    0,
    -1,
    8,
  ],
  42,
]
`;

exports[`dehydrate > dehydrate V2 { a: { a: 'a', b: 42 } } undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "a",
        "b",
      ],
      [
        1,
        3,
        4,
      ],
      [
        0,
        -1,
      ],
      [
        0,
        5,
      ],
      [
        1,
        6,
        7,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        0,
        -1,
        8,
      ],
      42,
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      -1 => 3,
      4 => 1,
      5 => 1,
      6 => 1,
      -2 => 1,
      7 => 1,
      8 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 { a: { b: 1 } } undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "a",
    "b",
  ],
  [
    1,
    3,
    4,
  ],
  [
    0,
    -1,
  ],
  [
    0,
    5,
  ],
  [
    1,
    6,
    7,
  ],
  [
    0,
    -2,
  ],
  [
    0,
    8,
  ],
  1,
]
`;

exports[`dehydrate > dehydrate V2 { a: { b: 1 } } undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "a",
        "b",
      ],
      [
        1,
        3,
        4,
      ],
      [
        0,
        -1,
      ],
      [
        0,
        5,
      ],
      [
        1,
        6,
        7,
      ],
      [
        0,
        -2,
      ],
      [
        0,
        8,
      ],
      1,
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      -1 => 1,
      4 => 1,
      5 => 1,
      6 => 1,
      -2 => 1,
      7 => 1,
      8 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 { a: 1 } undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "a",
  ],
  [
    1,
    3,
    4,
  ],
  [
    0,
    -1,
  ],
  [
    0,
    5,
  ],
  1,
]
`;

exports[`dehydrate > dehydrate V2 { a: 1 } undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "a",
      ],
      [
        1,
        3,
        4,
      ],
      [
        0,
        -1,
      ],
      [
        0,
        5,
      ],
      1,
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      -1 => 1,
      4 => 1,
      5 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 { a: null } undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "a",
  ],
  [
    1,
    3,
    4,
  ],
  [
    0,
    -1,
  ],
  [
    0,
    5,
  ],
  null,
]
`;

exports[`dehydrate > dehydrate V2 { a: null } undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "a",
      ],
      [
        1,
        3,
        4,
      ],
      [
        0,
        -1,
      ],
      [
        0,
        5,
      ],
      null,
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      -1 => 1,
      4 => 1,
      5 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 { fruit: [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ], …(2) } undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "fruit",
    "joinFruit",
    "sentence",
    "apple",
    "banana",
    "pineapple",
    "apple-banana-apple-banana-apple-pineapple",
    "There is a bit of fruit on the table. Some banana, apple, and pineapple.",
  ],
  [
    1,
    3,
    4,
  ],
  [
    0,
    -1,
    -2,
    -3,
  ],
  [
    0,
    5,
    -7,
    -8,
  ],
  [
    0,
    -4,
    -5,
    -4,
    -5,
    -4,
    -6,
  ],
]
`;

exports[`dehydrate > dehydrate V2 { fruit: [ 'apple', 'banana', 'apple', 'banana', 'apple', 'pineapple' ], …(2) } undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "fruit",
        "joinFruit",
        "sentence",
        "apple",
        "banana",
        "pineapple",
        "apple-banana-apple-banana-apple-pineapple",
        "There is a bit of fruit on the table. Some banana, apple, and pineapple.",
      ],
      [
        1,
        3,
        4,
      ],
      [
        0,
        -1,
        -2,
        -3,
      ],
      [
        0,
        5,
        -7,
        -8,
      ],
      [
        0,
        -4,
        -5,
        -4,
        -5,
        -4,
        -6,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      -1 => 1,
      -2 => 1,
      -3 => 1,
      4 => 1,
      5 => 1,
      -4 => 3,
      -5 => 2,
      -6 => 1,
      -7 => 1,
      -8 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 { values: [ 'apple', 'banana', 'pineapple' ], …(1) } undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "set",
    "values",
    "apple",
    "banana",
    "pineapple",
  ],
  [
    1,
    3,
    4,
  ],
  [
    0,
    -1,
    -2,
  ],
  [
    0,
    5,
    6,
  ],
  [
    4,
    6,
  ],
  [
    0,
    -3,
    -4,
    -5,
  ],
]
`;

exports[`dehydrate > dehydrate V2 { values: [ 'apple', 'banana', 'pineapple' ], …(1) } undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "set",
        "values",
        "apple",
        "banana",
        "pineapple",
      ],
      [
        1,
        3,
        4,
      ],
      [
        0,
        -1,
        -2,
      ],
      [
        0,
        5,
        6,
      ],
      [
        4,
        6,
      ],
      [
        0,
        -3,
        -4,
        -5,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      -1 => 1,
      -2 => 1,
      4 => 1,
      5 => 1,
      6 => 2,
      -3 => 1,
      -4 => 1,
      -5 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 {} undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
  ],
  {},
]
`;

exports[`dehydrate > dehydrate V2 {} undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
      ],
      {},
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 1 undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
  ],
  1,
]
`;

exports[`dehydrate > dehydrate V2 1 undefined > meta 1`] = `undefined`;

exports[`dehydrate > dehydrate V2 1.1 undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
  ],
  1.1,
]
`;

exports[`dehydrate > dehydrate V2 1.1 undefined > meta 1`] = `undefined`;

exports[`dehydrate > dehydrate V2 Map{ 'apple' => 1, 'banana' => 2, 'pineapple' => 3 } undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "apple",
    "banana",
    "pineapple",
  ],
  [
    5,
    3,
    4,
  ],
  [
    0,
    -1,
    -2,
    -3,
  ],
  [
    0,
    5,
    6,
    7,
  ],
  1,
  2,
  3,
]
`;

exports[`dehydrate > dehydrate V2 Map{ 'apple' => 1, 'banana' => 2, 'pineapple' => 3 } undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "apple",
        "banana",
        "pineapple",
      ],
      [
        5,
        3,
        4,
      ],
      [
        0,
        -1,
        -2,
        -3,
      ],
      [
        0,
        5,
        6,
        7,
      ],
      1,
      2,
      3,
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      -1 => 1,
      -2 => 1,
      -3 => 1,
      4 => 1,
      5 => 1,
      6 => 1,
      7 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 Set{ 'apple', 'banana', 'pineapple' } undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
    "apple",
    "banana",
    "pineapple",
  ],
  [
    4,
    3,
  ],
  [
    0,
    -1,
    -2,
    -3,
  ],
]
`;

exports[`dehydrate > dehydrate V2 Set{ 'apple', 'banana', 'pineapple' } undefined > meta 1`] = `
{
  "index": 2,
  "meta": {
    "flatpack": [
      "Flatpack JSON v2",
      [
        128,
        "apple",
        "banana",
        "pineapple",
      ],
      [
        4,
        3,
      ],
      [
        0,
        -1,
        -2,
        -3,
      ],
    ],
    "referenced": Map {
      1 => 1,
      2 => 1,
      3 => 1,
      -1 => 1,
      -2 => 1,
      -3 => 1,
    },
    "rootIndex": 2,
  },
}
`;

exports[`dehydrate > dehydrate V2 false undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
  ],
  false,
]
`;

exports[`dehydrate > dehydrate V2 false undefined > meta 1`] = `undefined`;

exports[`dehydrate > dehydrate V2 null undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
  ],
  null,
]
`;

exports[`dehydrate > dehydrate V2 null undefined > meta 1`] = `undefined`;

exports[`dehydrate > dehydrate V2 true undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
  ],
  true,
]
`;

exports[`dehydrate > dehydrate V2 true undefined > meta 1`] = `undefined`;

exports[`dehydrate > dehydrate V2 undefined undefined > flatpack 1`] = `
[
  "Flatpack JSON v2",
  [
    128,
  ],
]
`;

exports[`dehydrate > dehydrate V2 undefined undefined > meta 1`] = `undefined`;

exports[`dehydrate > dehydrate false undefined 1`] = `
[
  "Flatpack JSON v1",
  false,
]
`;

exports[`dehydrate > dehydrate null undefined 1`] = `
[
  "Flatpack JSON v1",
  null,
]
`;

exports[`dehydrate > dehydrate true undefined 1`] = `
[
  "Flatpack JSON v1",
  true,
]
`;

exports[`dehydrate > dehydrate undefined undefined 1`] = `
[
  "Flatpack JSON v1",
]
`;
